--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     //implementation 'com.squareup.okio:okio:2.1.0'
     //implementation 'com.google.code.gson:gson:2.8.5'
+    //Logger
+    implementation 'com.orhanobut:logger:2.2.0'
 }
-
